--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -125,5 +125,6 @@
 
     {% include 'bot_settings_modal.html' %}
     {% include 'load_data_modal.html' %}
+    {% include 'game_over_modal.html' %}
 </body>
 </html>
