update load data camera

--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -85,7 +85,7 @@
                     <button class="btn btn-sm btn-outline-light me-1" data-action="prev">⟪ Prev</button>
                     <button id="load-pgn-btn" class="btn btn-sm btn-success me-1" data-action="load"
                             data-bs-toggle="modal"
-                            data-bs-target="#loadModal">Load</button>
+                            data-bs-target="#loadDataModal">Load</button>
                     <button class="btn btn-sm btn-outline-light me-1" data-action="next">Next ⟫</button>
                     <button class="btn btn-sm btn-outline-light me-1" data-action="last">Last ⟫</button>
                     <button class="btn btn-sm btn-outline-danger" data-action="clear">Clear 🗑️</button>
