--- a/frontend/templates/load_data_modal.html
+++ b/frontend/templates/load_data_modal.html
@@ -8,13 +8,16 @@
 
                 <ul class="nav nav-tabs" id="loadTabs" role="tablist">
                     <li class="nav-item" role="presentation">
-                        <button class="nav-link active" id="pgn-tab" data-bs-toggle="tab" data-bs-target="#pgn-pane" type="button" role="tab" aria-controls="pgn-pane" aria-selected="true">Văn bản PGN</button>
+                        <button class="nav-link active" id="pgn-tab" data-bs-toggle="tab" data-bs-target="#pgn-pane" type="button" role="tab" aria-controls="pgn-pane" aria-selected="true">PGN</button>
                     </li>
                     <li class="nav-item" role="presentation">
-                        <button class="nav-link" id="fen-tab" data-bs-toggle="tab" data-bs-target="#fen-pane" type="button" role="tab" aria-controls="fen-pane" aria-selected="false">Chuỗi FEN</button>
+                        <button class="nav-link" id="fen-tab" data-bs-toggle="tab" data-bs-target="#fen-pane" type="button" role="tab" aria-controls="fen-pane" aria-selected="false">FEN</button>
                     </li>
                     <li class="nav-item" role="presentation">
-                        <button class="nav-link" id="image-tab" data-bs-toggle="tab" data-bs-target="#image-pane" type="button" role="tab" aria-controls="image-pane" aria-selected="false">Hình ảnh bàn cờ</button>
+                        <button class="nav-link" id="image-tab" data-bs-toggle="tab" data-bs-target="#image-pane" type="button" role="tab" aria-controls="image-pane" aria-selected="false">Tải ảnh</button>
+                    </li>
+                    <li class="nav-item" role="presentation">
+                        <button class="nav-link" id="live-scan-tab" data-bs-toggle="tab" data-bs-target="#live-scan-pane" type="button" role="tab" aria-controls="live-scan-pane" aria-selected="false">Quét Trực tiếp</button>
                     </li>
                 </ul>
 
@@ -30,9 +33,15 @@
                         <input type="text" class="form-control" id="fen-input" placeholder="rnbqkbnr/pppppppp/8/8/8/8/PPPPPPPP/RNBQKBNR w KQkq - 0 1" />
                     </div>
 
-                    <div class="tab-pane fade" id="image-pane" role="tabpanel" aria-labelledby="image-tab" tabindex="0">
-                        <label for="image-input" class="form-label">Chọn file hình ảnh bàn cờ:</label>
-                        <input type="file" class="form-control" id="image-input" accept="image/*" />
+                    <div class="tab-pane fade" id="image-pane" role="tabpanel" aria-labelledby="image-tab">
+                        <label for="image-upload-input" class="form-label">Chọn ảnh bàn cờ (2D):</label>
+                        <input class="form-control" type="file" id="image-upload-input" accept="image/png, image/jpeg">
+                        <div id="image-upload-status" class="form-text text-white-50 mt-2"></div>
+                      </div>
+                    <div class="tab-pane fade" id="live-scan-pane" role="tabpanel" aria-labelledby="live-scan-tab" tabindex="0">
+                        <label for="webcam-feed" class="form-label">Hướng camera vào bàn cờ:</label>
+                        <video id="webcam-feed" autoplay playsinline style="width: 100%; border-radius: 5px; background-color: #000;"></video>
+                        <div id="scan-status" class="form-text text-white-50 mt-2"></div>
                     </div>
                 </div>
             </div>
