--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -32,9 +32,12 @@
                     <a class="navbar-brand text-white fw-bold" href="#">
                         <span style="color: var(--color-primary);">WonderChess</span>
                     </a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
 
                     <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
-                        <ul class="navbar-nav">
+                        <ul class="navbar-nav justify-content-center flex-grow-1">
                             <li class="nav-item" id="nav-analyze">
                                 <a class="nav-link nav-mode-link active" href="#" data-mode="analyze">Phân tích</a>
                             </li>
@@ -45,19 +48,16 @@
                                 <a class="nav-link nav-mode-link" href="#" data-mode="opening">Khai cuộc</a>
                             </li>
                         </ul>
-                    </div>
-                    <div class="d-flex align-items-center">
-                        <span id="user-display" class="d-none me-3 align-self-center text-white-50">Chào, Khách!</span>
-                        <button id="login-button" class="btn btn-outline-success" type="button">
-                            Login
-                        </button>
+                        <div class="d-flex align-items-center" id="navbar-user-section">
+                            <span id="user-display" class="d-none me-3 align-self-center text-white-50">Chào, Khách!</span>
+                        </div>
                     </div>
                 </div>
             </nav>
         </header>
         <div class="row main-content-row">
 
-<div class="col-12 col-md-6">
+<div class="col-12 col-md-6 col-lg-6">
     <div id="game-view-container" class="d-flex justify-content-center align-items-stretch">
 
         <div class="score-alignment-wrapper me-3">
@@ -96,7 +96,7 @@
     </div>
 </div>
 
-            <div class="col-12 col-lg-6 order-lg-3">
+            <div class="col-12 col-md-6 col-lg-6">
                 <div class="chatbot-container p-3 rounded-3" style="background: var(--color-element-background);">
                     <h5 class="text-center text-white mb-3">Cuộc trò chuyện với Alice</h5>
                     <div id="chatbot-messages" style="overflow-y: auto;">
