--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AliceChess</title>
+    <title>WonderChess</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" rel="stylesheet">
@@ -73,8 +73,8 @@
             <div class="chess-board-area rounded-3" style="background: var(--color-element-background);">
                 <div id="timer-black" class="timer-box timer-top-right">0:00</div>
                 <div id="myBoard" style="width: 100%;"></div>
-                <div id="timer-white" class="timer-box timer-bottom-right">0:00</div>
 
+                <div id="timer-white" class="timer-box timer-bottom-right">0:00</div>
                 <div id="pgn-history-container" class="mt-3">
                     <div id="pgn-history-list">
                         </div>
