--- a/frontend/templates/load_data_modal.html
+++ b/frontend/templates/load_data_modal.html
@@ -1,46 +1,59 @@
 <div class="modal fade" id="loadDataModal" tabindex="-1" aria-labelledby="loadDataModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-lg"> <div class="modal-content">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
             <div class="modal-header bg-dark text-white">
                 <h5 class="modal-title" id="loadDataModalLabel">Tải Dữ Liệu Ván Cờ</h5>
-                <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
+                <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"
+                    aria-label="Close"></button>
             </div>
             <div class="modal-body">
 
                 <ul class="nav nav-tabs" id="loadTabs" role="tablist">
                     <li class="nav-item" role="presentation">
-                        <button class="nav-link active" id="pgn-tab" data-bs-toggle="tab" data-bs-target="#pgn-pane" type="button" role="tab" aria-controls="pgn-pane" aria-selected="true">PGN</button>
+                        <button class="nav-link active" id="pgn-tab" data-bs-toggle="tab" data-bs-target="#pgn-pane"
+                            type="button" role="tab" aria-controls="pgn-pane" aria-selected="true">PGN</button>
                     </li>
                     <li class="nav-item" role="presentation">
-                        <button class="nav-link" id="fen-tab" data-bs-toggle="tab" data-bs-target="#fen-pane" type="button" role="tab" aria-controls="fen-pane" aria-selected="false">FEN</button>
+                        <button class="nav-link" id="fen-tab" data-bs-toggle="tab" data-bs-target="#fen-pane"
+                            type="button" role="tab" aria-controls="fen-pane" aria-selected="false">FEN</button>
                     </li>
                     <li class="nav-item" role="presentation">
-                        <button class="nav-link" id="image-tab" data-bs-toggle="tab" data-bs-target="#image-pane" type="button" role="tab" aria-controls="image-pane" aria-selected="false">Tải ảnh</button>
+                        <button class="nav-link" id="image-tab" data-bs-toggle="tab" data-bs-target="#image-pane"
+                            type="button" role="tab" aria-controls="image-pane" aria-selected="false">Tải ảnh</button>
                     </li>
                     <li class="nav-item" role="presentation">
-                        <button class="nav-link" id="live-scan-tab" data-bs-toggle="tab" data-bs-target="#live-scan-pane" type="button" role="tab" aria-controls="live-scan-pane" aria-selected="false">Quét Trực tiếp</button>
+                        <button class="nav-link" id="live-scan-tab" data-bs-toggle="tab"
+                            data-bs-target="#live-scan-pane" type="button" role="tab" aria-controls="live-scan-pane"
+                            aria-selected="false">Quét Trực tiếp</button>
                     </li>
                 </ul>
 
                 <div class="tab-content mt-3" id="loadTabsContent">
 
-                    <div class="tab-pane fade show active" id="pgn-pane" role="tabpanel" aria-labelledby="pgn-tab" tabindex="0">
-                        <label for="pgn-input" class="form-label">Dán văn bản PGN đầy đủ (có Headers và Nước đi):</label>
-                        <textarea class="form-control" id="pgn-input" rows="8" placeholder="[Event '...']... 1. e4 e5 2. Nf3 Nc6 3. Bb5 a6..."></textarea>
+                    <div class="tab-pane fade show active" id="pgn-pane" role="tabpanel" aria-labelledby="pgn-tab"
+                        tabindex="0">
+                        <label for="pgn-input" class="form-label">Dán văn bản PGN đầy đủ (có Headers và Nước
+                            đi):</label>
+                        <textarea class="form-control" id="pgn-input" rows="8"
+                            placeholder="[Event '...']... 1. e4 e5 2. Nf3 Nc6 3. Bb5 a6..."></textarea>
                     </div>
 
                     <div class="tab-pane fade" id="fen-pane" role="tabpanel" aria-labelledby="fen-tab" tabindex="0">
                         <label for="fen-input" class="form-label">Dán chuỗi FEN:</label>
-                        <input type="text" class="form-control" id="fen-input" placeholder="rnbqkbnr/pppppppp/8/8/8/8/PPPPPPPP/RNBQKBNR w KQkq - 0 1" />
+                        <input type="text" class="form-control" id="fen-input"
+                            placeholder="rnbqkbnr/pppppppp/8/8/8/8/PPPPPPPP/RNBQKBNR w KQkq - 0 1" />
                     </div>
 
                     <div class="tab-pane fade" id="image-pane" role="tabpanel" aria-labelledby="image-tab">
                         <label for="image-upload-input" class="form-label">Chọn ảnh bàn cờ (2D):</label>
                         <input class="form-control" type="file" id="image-upload-input" accept="image/png, image/jpeg">
                         <div id="image-upload-status" class="form-text text-white-50 mt-2"></div>
-                      </div>
-                    <div class="tab-pane fade" id="live-scan-pane" role="tabpanel" aria-labelledby="live-scan-tab" tabindex="0">
+                    </div>
+                    <div class="tab-pane fade" id="live-scan-pane" role="tabpanel" aria-labelledby="live-scan-tab"
+                        tabindex="0">
                         <label for="webcam-feed" class="form-label">Hướng camera vào bàn cờ:</label>
-                        <video id="webcam-feed" autoplay playsinline style="width: 100%; border-radius: 5px; background-color: #000;"></video>
+                        <video id="webcam-feed" autoplay playsinline
+                            style="width: 100%; border-radius: 5px; background-color: #000;"></video>
                         <div id="scan-status" class="form-text text-white-50 mt-2"></div>
                     </div>
                 </div>
