fix analysis chat function

--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -44,9 +44,9 @@
                             <li class="nav-item" id="nav-play-bot">
                                 <a class="nav-link nav-mode-link" href="#" data-mode="play">Chơi với Bot</a>
                             </li>
-                            <li class="nav-item" id="nav-opening">
-                                <a class="nav-link nav-mode-link" href="#" data-mode="opening">Khai cuộc</a>
-                            </li>
+<!--                            <li class="nav-item" id="nav-opening">-->
+<!--                                <a class="nav-link nav-mode-link" href="#" data-mode="opening">Khai cuộc</a>-->
+<!--                            </li>-->
                         </ul>
                         <div class="d-flex align-items-center" id="navbar-user-section">
                             <span id="user-display" class="d-none me-3 align-self-center text-white-50">Chào, Khách!</span>
